--- a/ovtlyr-2023/affiliate-program-rules-and-regulations.html
+++ b/ovtlyr-2023/affiliate-program-rules-and-regulations.html
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
 <meta name="format-detection" content="telephone=no">
-<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.svg">
+<link rel="icon" type="image/ico" sizes="32x32" href="images/favicon-32x32.ico">
 <link rel="preconnect" href="https://fonts.gstatic.com" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -16,30 +16,34 @@
 </head>
 <body>
   <header class="header_outer">
-    <div class="header_inner1 new_head">
-      <div class="container">
+    <div class="header_inner1 new_head" style="display: none;">
+      <div class="container container_mobile">
         <div class="top_header">
           <p><a target="_blank" href="http://ovtlyrtraining.com/">Sign Up For Our Free Upcoming Webclass for Traders</a></p>
         </div>
       </div>
     </div>
     <div class="header_inner2 new_head2">
-      <div class="container">
+      <div class="container container_mobile">
         <div class="header_sec">
           <div class="header_sec1">
             <a href="home.html">
-              <img class="white_logo" src="images/home-footer-logo.svg" alt="OVTLYR Logo" />
+              <img class="white_logo" src="images/Ovtlyr-Logo.svg" alt="OVTLYR Logo" />
               <img class="black_logo" src="images/black-logo.svg" alt="OVTLYR Logo" />
             </a>
           </div>
           <div class="header_sec2">
             <ul>
+              <li><button type="button" class="yellow_btn rounded_radius">Testimonials</button></li>
               <li><a href="features.html">Features</a></li>
               <li><a href="pricing.html">Pricing</a></li>
               <li><a href="community.html">Community</a></li>
-              <li><a href="log-in.html">Log In</a></li>
-              <li><a href="sign-up.html" class="signUp_btn">Sign Up</a></li>
-              <li><a href="#" class="trial_btn">Start Your Free Trial Today</a></li>
+              <!-- Without Login -->
+              <!-- <li><a href="sign-up.html">Get Started</a></li>
+              <li><a href="log-in.html" class="signUp_btn">My Account</a></li> -->
+              <!-- With Login -->
+              <li><a href="javascript:void(0);">Logout</a></li>
+              <li><a href="dashboard.html" class="signUp_btn">My Account</a></li>
             </ul>
             <div class="mobile_menu">
               <div class="b-nav">
@@ -48,12 +52,16 @@
                   <button type="button" class="b-menu2"><span class="material-symbols-outlined">close</span></button>
                 </div>
                 <ul>
+                  <li class="button_mobile"><button type="button" class="yellow_btn rounded_radius">Testimonials</button></li>
                   <li><a href="features.html">Features</a></li>
                   <li><a href="pricing.html">Pricing</a></li>
                   <li><a href="community.html">Community</a></li>
-                  <li><a href="log-in.html">Log In</a></li>
-                  <li><a href="sign-up.html" class="signUp_btn">Sign Up</a></li>
-                  <li><a href="#" class="trial_btn">Start Your Free Trial Today</a></li>
+                  <!-- Without Login -->
+                  <!-- <li><a href="sign-up.html">Get Started</a></li>
+                  <li><a href="log-in.html" class="signUp_btn">My Account</a></li> -->
+                  <!-- With Login -->
+                  <li><a href="javascript:void(0);">Logout</a></li>
+                  <li class="button_mobile"><a href="dashboard.html" class="signUp_btn">My Account</a></li>
                 </ul>
               </div>
               <!-- Burger-Icon -->
@@ -241,8 +249,7 @@
       <div class="container">
         <div class="footer_outer1">
           <div class="footer_outer11">
-            <a href="home.html"><img src="images/home-footer-logo.svg" alt="OVTLYR Logo" /></a>
-            <p>Outliers Win</p>
+            <a href="home.html"><img src="images/Ovtlyr-Logo.svg" alt="OVTLYR Logo" /></a>
             <ul>
               <li><a href="https://www.facebook.com/Ovtlyr/" target="_blank"><img src="images/facebook.svg" alt="Facebook" /></a></li>
               <li><a href="https://twitter.com/ovtlyr" target="_blank"><img src="images/twitter.svg" alt="Twitter" /></a></li>
@@ -261,6 +268,8 @@
                 <li><a href="pricing.html">Pricing</a></li>
                 <li><a href="affiliates.html">Affiliates</a></li>
                 <li><a href="blogs.html">Blog</a></li>
+                <li><a href="roadmap.html">Roadmap</a></li>
+                <li><a href="sitemap.html">Sitemap</a></li>
               </ul>
             </div>
             <div>
@@ -274,7 +283,7 @@
           </div>
         </div>
         <div class="footer_outer2">
-          <p>©2023 Company Name. All Rights Reserved</p>
+          <p>©2025 OVTLYR. All Rights Reserved</p>
           <ul>
             <li><a href="privacy-policy.html">Privacy Policy</a></li>
             <li><a href="terms-of-use.html">Terms of Use</a></li>
