--- a/ovtlyr-2023/contact.html
+++ b/ovtlyr-2023/contact.html
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
 <meta name="format-detection" content="telephone=no">
-<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.svg">
+<link rel="icon" type="image/ico" sizes="32x32" href="images/favicon-32x32.ico">
 <link rel="preconnect" href="https://fonts.gstatic.com" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -36,39 +36,39 @@ if (localStorage.getItem('darkMode') === "on") {
   });
 }
 </script>
-<div class="page toggle new_sidebar">
-  <div class="sidebar active">
-    <div class="sidebar__top">
+<div class="page toggle new_sidebar final_dashbd1">
+  <div class="sidebar active final_dashbd11">
+    <!-- <div class="sidebar__top">
       <button class="sidebar__close"><span class="material-symbols-outlined">close</span></button>
       <a class="sidebar__logo" href="stock-detail.html">
         <img class="sidebar__pic sidebar__pic_black" src="images/black-logo.svg" alt="OVTLYR Logo" />
         <img class="sidebar__pic sidebar__pic_white" src="images/white-logo.svg" alt="OVTLYR Logo" />
       </a>
       <button class="sidebar__burger"></button>
-    </div>
+    </div> -->
     <div class="sidebar__wrapper ovtlyr_sidebar">
       <div class="sidebar__inner">
-        <a class="sidebar__logo" href="stock-detail.html">
+        <!-- <a class="sidebar__logo" href="stock-detail.html">
           <img class="sidebar__pic sidebar__pic_black" src="images/black-logo-small.svg" alt="OVTLYR Logo" />
           <img class="sidebar__pic sidebar__pic_white" src="images/white-logo-small.svg" alt="OVTLYR Logo" />
-        </a>
+        </a> -->
         <div class="sidebar__list">
           <div class="sidebar__group">
             <div class="sidebar__menu">
               <div class="side_dropdown">
-                <a class="sidebar__item" href="dashboard.html" data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Dashboard">
+                <a class="sidebar__item" href="dashboard-latest.html" data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Dashboard">
                   <div class="sidebar__icon">
                     <img src="images/dashboard.svg" alt="Dashboard" />
                   </div>
-                  <div class="sidebar__text">Dashboard</div>
+                  <!-- <div class="sidebar__text">Dashboard</div> -->
                 </a>
               </div>
               <div class="side_dropdown">
-                <a class="sidebar__item" href="market-breadth.html" data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Market Breadth">
+                <a class="sidebar__item" href="market-breadth-latest.html" data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Market Breadth">
                   <div class="sidebar__icon">
                     <img src="images/market-breadth.svg" alt="Market" />
                   </div>
-                  <div class="sidebar__text">Market Breadth</div>
+                  <!-- <div class="sidebar__text">Market Breadth</div> -->
                 </a>
               </div>
               <div class="side_dropdown">
@@ -76,7 +76,7 @@ if (localStorage.getItem('darkMode') === "on") {
                   <div class="sidebar__icon">
                     <img src="images/stock-etf.svg" alt="Stocks" />
                   </div>
-                  <div class="sidebar__text">Screener</div>
+                  <!-- <div class="sidebar__text">Screener</div> -->
                 </a>
               </div>
               <div class="side_dropdown">
@@ -84,15 +84,85 @@ if (localStorage.getItem('darkMode') === "on") {
                   <div class="sidebar__icon">
                     <img src="images/watchlist.svg" alt="Star" />
                   </div>
-                  <div class="sidebar__text">Watchlist</div>
+                  <!-- <div class="sidebar__text">Watchlist</div> -->
                 </a>
               </div>
               <div class="side_dropdown">
-                <a class="sidebar__item" href="news-and-analyst.html" data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" data-bs-placement="bottom" title="News & Analyst">
+                <a class="sidebar__item" href="news-and-analyst.html" data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" data-bs-placement="bottom" title="News and Analyst Ratings">
                   <div class="sidebar__icon">
                     <img src="images/news.svg" alt="News" />
                   </div>
-                  <div class="sidebar__text">News & Analyst</div>
+                  <!-- <div class="sidebar__text">News and Analyst Ratings</div> -->
+                </a>
+              </div>
+              <div class="side_dropdown">
+                <a class="sidebar__item" href="notification.html" data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Notification & List Management">
+                  <div class="sidebar__icon">
+                    <img src="images/notification.svg" alt="Notification" />
+                  </div>
+                  <span class="noti_count2">10</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="sidebar__inner final_dashbd111">
+        <div class="sidebar__list">
+          <div class="sidebar__group">
+            <div class="sidebar__menu">
+              <div class="side_dropdown">
+                <div class="profileDrop dropup-right dropup" data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Settings">
+                  <a class="sidebar__item p-0" href="#" id="settingsButton" data-bs-toggle="dropdown" aria-expanded="false">
+                    <div class="sidebar__icon">
+                      <img src="images/setting.svg" alt="setting" />
+                    </div>
+                  </a>
+                  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="settingsButton" >
+                    <li><a class="dropdown-item" href="subscription-all.html"><p class="mb-0">Subscription Management</p></a></li>
+                    <li><a class="dropdown-item" href="notification.html"><p class="mb-0">Notification Management</p></a></li>
+                    <li><a class="dropdown-item" href="affiliate-info.html"><p class="mb-0">Referral Dashboard</p></a></li>
+                    <li><a class="dropdown-item" href="tutorials.html"><p class="mb-0">Tutorials</p></a></li>
+                    <li><a class="dropdown-item" href="contact.html"><p class="mb-0">Contact Us</p></a></li>
+                    <li>
+                      <a class="dropdown-item" href="javascript:void(0);">
+                        <p class="switchThemeBtn mb-0">
+                          <span>Theme</span>
+                          <label class="switch switch_theme js-switch-theme mt-0">
+                            <input class="switch__input" type="checkbox">
+                            <span class="switch__in">
+                              <span class="switch__box"></span>
+                              <span class="switch__icon">
+                                <span class="material-symbols-outlined icon-sun">dark_mode</span>
+                                <span class="material-symbols-outlined icon-moon">light_mode</span>
+                              </span>
+                            </span>
+                          </label>
+                        </p>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="side_dropdown">
+                <a class="sidebar__item" href="https://discord.gg/DjgmSrdxUY" target="_blank" data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Discord">
+                  <div class="sidebar__icon">
+                    <img src="images/discord.svg" alt="Discord" />
+                  </div>
+                </a>
+              </div>
+              <div class="side_dropdown">
+                <a class="sidebar__item" href="javascript:void(0);" data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Logout">
+                  <div class="sidebar__icon">
+                    <img src="images/logout.svg" alt="Logout" />
+                  </div>
+                </a>
+              </div>
+              <div class="side_dropdown">
+                <a class="sidebar__item" href="profile.html" data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Profile">
+                  <div class="sidebar__icon profile_icon">
+                    <img src="images/profile.svg" alt="Profile" />
+                  </div>
                 </a>
               </div>
             </div>
@@ -101,10 +171,10 @@ if (localStorage.getItem('darkMode') === "on") {
       </div>
     </div>
   </div>
-  <div class="page__wrapper">
+  <div class="page__wrapper final_dashbd12">
     <div class="page__center new_content">
-      <div class="dashboard_cont">
-        <div class="new_header">
+      <div class="dashboard_cont final_dashbd2 p-0">
+        <!-- <div class="new_header">
           <div class="newleft_21">
             <div class="me-1">
               <a href="https://discord.gg/DjgmSrdxUY" target="_blank"><img src="images/discord.svg" class="icon_img" alt="Discord" /></a>
@@ -139,7 +209,7 @@ if (localStorage.getItem('darkMode') === "on") {
                 </ul>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="contactUs_sec1">
           <div class="top_box mb-3 mb-md-4">
             <p>Need technical support or any other help with OVTLYR platform? Create a Helpdesk Ticket <a href="mailto:support@ovtlyr.zendesk.com">Here</a>, or Send an email to <span>support@ovtlyr.zendesk.com</span> to create ticket.</p>
